--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -29,8 +29,8 @@
     <!-- My CSS -->
   </head>
   <body>
-    <div id="app">
-      <div class="sfondo"></div>
+    <div id="app" v-cloak>
+      <div class="container"></div>
     </div>
     <!-- Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
