feat: aggiunta container main

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div id="app" v-cloak>
-      <div class="container"></div>
+      <div class="container">ciao</div>
     </div>
     <!-- Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
