--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -30,7 +30,18 @@
   </head>
   <body>
     <div id="app" v-cloak>
-      <div class="container">ciao</div>
+      <div class="container">
+        <!-- LEFT SECTION -->
+        <div class="left-sidebar">
+          <!-- My Profile -->
+          <div class="header-left"></div>
+          <!-- Notifications -->
+          <!-- Search -->
+          <!-- Contacts list -->
+        </div>
+        <!-- RIGHT SECTION -->
+        <div class="right-section">ciao</div>
+      </div>
     </div>
     <!-- Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
