feat: header left

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -34,7 +34,22 @@
         <!-- LEFT SECTION -->
         <div class="left-sidebar">
           <!-- My Profile -->
-          <div class="header-left"></div>
+          <div class="header-left">
+            <div class="profile-left">
+              <div class="cont-foto">
+                <img src="../img/avatar_io.jpg" alt="my-avatar" />
+              </div>
+              <div class="info-profilo">
+                <strong>John</strong>
+                <!-- <p>accesso</p> -->
+              </div>
+            </div>
+            <div class="icons-myprofile">
+              <i class="fa-solid fa-circle-notch"></i>
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </div>
+          </div>
           <!-- Notifications -->
           <!-- Search -->
           <!-- Contacts list -->
