feat: notification section

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -51,6 +51,15 @@
             </div>
           </div>
           <!-- Notifications -->
+          <div class="notifications">
+            <div class="cont-bell-icon">
+              <i class="fa-solid fa-bell-slash"></i>
+            </div>
+            <div class="info-profilo">
+              <p id="notif-title">Ricevi notifiche di nuovi messaggi</p>
+              <a href="#">Attiva notifiche desktop</a>
+            </div>
+          </div>
           <!-- Search -->
           <!-- Contacts list -->
         </div>
