feat: search section

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -61,6 +61,18 @@
             </div>
           </div>
           <!-- Search -->
+          <div class="search-section">
+            <div class="cont-search">
+              <button type="button">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+              <input
+                type="text"
+                id="new-task"
+                placeholder="Cerca o inizia una nuova chat"
+              />
+            </div>
+          </div>
           <!-- Contacts list -->
         </div>
         <!-- RIGHT SECTION -->
