feat: fix right section spaces

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -142,7 +142,43 @@
           </div>
         </div>
         <!-- RIGHT SECTION -->
-        <div class="right-section">ciao</div>
+        <div class="right-section">
+          <!-- header -->
+          <div class="header-right">
+            <div class="profile-left">
+              <div class="cont-foto">
+                <img src="../img/avatar_io.jpg" alt="my-avatar" />
+              </div>
+              <div class="info-profilo">
+                <strong>John</strong>
+                <p id="last-access">Ultimo accesso oggi alle 12:00</p>
+              </div>
+            </div>
+            <div class="icons-myprofile">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <i class="fa-solid fa-paperclip"></i>
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </div>
+          </div>
+          <!-- main chat -->
+          <div class="main-chat">main chat</div>
+          <!-- footer-input -->
+          <div class="footer-right">
+            <div class="footer-input-left">
+              <i class="fa-regular fa-face-smile"></i>
+            </div>
+            <div class="footer-input-center">
+              <input
+                type="text"
+                id="new-task"
+                placeholder="Cerca o inizia una nuova chat"
+              />
+            </div>
+            <div class="footer-input-right">
+              <i class="fa-solid fa-microphone"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
