feat: input right chat

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -171,7 +171,7 @@
               <input
                 type="text"
                 id="new-task"
-                placeholder="Cerca o inizia una nuova chat"
+                placeholder="Scrivi un messaggio"
               />
             </div>
             <div class="footer-input-right">
