feat: main-chat

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -161,7 +161,7 @@
             </div>
           </div>
           <!-- main chat -->
-          <div class="main-chat">main chat</div>
+          <div class="main-chat"></div>
           <!-- footer-input -->
           <div class="footer-right">
             <div class="footer-input-left">
