fix: inline-block links w/ icons

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -45,9 +45,15 @@
               </div>
             </div>
             <div class="icons-myprofile">
-              <i class="fa-solid fa-circle-notch"></i>
-              <i class="fa-solid fa-message"></i>
-              <i class="fa-solid fa-ellipsis-vertical"></i>
+              <a href="#">
+                <i class="fa-solid fa-circle-notch"></i>
+              </a>
+              <a href="#">
+                <i class="fa-solid fa-message"></i>
+              </a>
+              <a href="#">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </a>
             </div>
           </div>
           <!-- Notifications -->
@@ -165,7 +171,9 @@
           <!-- footer-input -->
           <div class="footer-right">
             <div class="footer-input-left">
-              <i class="fa-regular fa-face-smile"></i>
+              <a href="#">
+                <i class="fa-regular fa-face-smile"></i>
+              </a>
             </div>
             <div class="footer-input-center">
               <input
@@ -175,7 +183,9 @@
               />
             </div>
             <div class="footer-input-right">
-              <i class="fa-solid fa-microphone"></i>
+              <a href="#">
+                <i class="fa-solid fa-microphone"></i>
+              </a>
             </div>
           </div>
         </div>
