fix: id p of li elements

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -93,7 +93,7 @@
                   </div>
                   <div class="info-profilo">
                     <strong>{{ contact.name }}</strong>
-                    <p id="last-message">Ultimo messaggio invitato</p>
+                    <p class="last-message">Ultimo messaggio invitato</p>
                   </div>
                 </div>
                 <div class="profile-time">
