--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -167,7 +167,9 @@
             </div>
           </div>
           <!-- main chat -->
-          <div class="main-chat"></div>
+          <div class="main-chat">
+            <div class="cont-chat">ciao</div>
+          </div>
           <!-- footer-input -->
           <div class="footer-right">
             <div class="footer-input-left">
