--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -83,7 +83,11 @@
           <div class="contact-list-section">
             <!-- Profile -->
             <ul>
-              <li v-for="(contact, index) in contacts">
+              <li
+                v-for="(contact, index) in contacts"
+                @click="changeContact(index)"
+                :class="index === currentContact ? 'active' : ''"
+              >
                 <div class="profile-left">
                   <div class="cont-foto">
                     <img
@@ -153,10 +157,13 @@
           <div class="header-right">
             <div class="profile-left">
               <div class="cont-foto">
-                <img src="../img/avatar_io.jpg" alt="my-avatar" />
+                <img
+                  :src="`.${contacts[currentContact].avatar}`"
+                  alt="my-avatar"
+                />
               </div>
               <div class="info-profilo">
-                <strong>John</strong>
+                <strong>{{ contacts[currentContact].name }}</strong>
                 <p id="last-access">Ultimo accesso oggi alle 12:00</p>
               </div>
             </div>
