first try answer

--- a/milestone3/index.html
+++ b/milestone3/index.html
@@ -37,7 +37,7 @@
           <div class="header-left">
             <div class="profile-left">
               <div class="cont-foto">
-                <img src="../img/avatar_io.jpg" alt="my-avatar" />
+                <img src="../img/avatar_2.jpg" alt="my-avatar" />
               </div>
               <div class="info-profilo">
                 <strong>John</strong>
@@ -182,7 +182,7 @@
                   :class="element.status"
                 >
                   <p>{{ element.message }}</p>
-                  <span>Orario</span>
+                  <span>{{ element.date }}</span>
                 </li>
               </ul>
             </div>
