--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -74,15 +74,16 @@
               </button>
               <input
                 type="text"
-                id="new-task"
+                id="key-contact"
                 placeholder="Cerca o inizia una nuova chat"
+                v-model="keyContact"
               />
             </div>
           </div>
           <!-- Contacts list -->
           <div class="contact-list-section">
             <!-- Profile -->
-            <ul>
+            <ul v-if="filteredTask().length > 0">
               <li
                 v-for="(contact, index) in contacts"
                 @click="changeContact(index)"
