--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -142,9 +142,13 @@
                 <li
                   v-for="(element, index) in contacts[currentContact].messages"
                   :class="element.status"
-                  @click="deleteMessage(index)"
+                  @click="showChevron"
                 >
-                  <i class="fa-solid fa-chevron-down"></i>
+                  <i
+                    v-show="visibleChevron"
+                    @click="deleteMessage(index)"
+                    class="fa-solid fa-chevron-down"
+                  ></i>
                   <p>{{ element.message }}</p>
                   <span>{{ element.date }}</span>
                 </li>
