feat: scaffolding BONUS

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -112,7 +112,7 @@
                   </div>
                 </div>
                 <div class="profile-time">
-                  <span>12:00</span>
+                  <span>ora ultimo messaggio</span>
                 </div>
               </li>
               <!-- </template> -->
